deploy: VentoryApp/website-content@eadcabe2de748dc97e1ae6998d0cc6999eb0e721

--- a/index.html
+++ b/index.html
@@ -908,7 +908,9 @@ subscribeForm.addEventListener('submit', (e) => {
       {
         fields: getFormData(SUBSCRIBE_FORM),
         context: {
-          hutk: getHubspotUtkCookie()
+          hutk: getHubspotUtkCookie(),
+          pageName: document.title,
+          pageUri: window.location
         }
       }), 
    })
