--- a/about/index.html
+++ b/about/index.html
@@ -490,7 +490,9 @@ subscribeForm.addEventListener('submit', (e) => {
       {
         fields: getFormData(SUBSCRIBE_FORM),
         context: {
-          hutk: getHubspotUtkCookie()
+          hutk: getHubspotUtkCookie(),
+          pageName: document.title,
+          pageUri: window.location
         }
       }), 
    })
