--- a/team/index.html
+++ b/team/index.html
@@ -543,7 +543,9 @@ subscribeForm.addEventListener('submit', (e) => {
       {
         fields: getFormData(SUBSCRIBE_FORM),
         context: {
-          hutk: getHubspotUtkCookie()
+          hutk: getHubspotUtkCookie(),
+          pageName: document.title,
+          pageUri: window.location
         }
       }), 
    })
