deploy: VentoryApp/website-content@e0c126d3b71ca92e69376f358a5167a9c30b0d99

--- a/contact/index.html
+++ b/contact/index.html
@@ -516,7 +516,7 @@ subscribeForm.addEventListener('submit', (e) => {
         context: {
           hutk: getHubspotUtkCookie(),
           pageName: document.title,
-          pageUri: window.location
+          pageUri: window.location.href
         }
       }), 
    })
