--- a/faq/index.html
+++ b/faq/index.html
@@ -462,7 +462,7 @@ subscribeForm.addEventListener('submit', (e) => {
         context: {
           hutk: getHubspotUtkCookie(),
           pageName: document.title,
-          pageUri: window.location
+          pageUri: window.location.href
         }
       }), 
    })
