--- a/get-started/index.html
+++ b/get-started/index.html
@@ -464,7 +464,7 @@ subscribeForm.addEventListener('submit', (e) => {
         context: {
           hutk: getHubspotUtkCookie(),
           pageName: document.title,
-          pageUri: window.location
+          pageUri: window.location.href
         }
       }), 
    })
