--- a/legal/license-agreement/index.html
+++ b/legal/license-agreement/index.html
@@ -582,7 +582,7 @@ subscribeForm.addEventListener('submit', (e) => {
         context: {
           hutk: getHubspotUtkCookie(),
           pageName: document.title,
-          pageUri: window.location
+          pageUri: window.location.href
         }
       }), 
    })
