--- a/team/index.html
+++ b/team/index.html
@@ -545,7 +545,7 @@ subscribeForm.addEventListener('submit', (e) => {
         context: {
           hutk: getHubspotUtkCookie(),
           pageName: document.title,
-          pageUri: window.location
+          pageUri: window.location.href
         }
       }), 
    })
