deploy: VentoryApp/website-content@dc31937d68a43c16f13cfdd848698e9d270d45a7

--- a/index.html
+++ b/index.html
@@ -613,8 +613,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="card px-4 py-5 border-0 rounded-lg shadow text-center card-border-bottom mb-5 mt-3">
           <i class="fa fa-quote-right icon-quote mb-4 mx-auto"></i>
           <p class="mb-4"><br><br>We really like the Ventory solution as an extension working seamlessly with our existing systems. <br><br><br><br>Very satisfied with the levels of service and support Ventory provided us.<br><br><br></p>
-          <h4>Alice kelly</h4>
-          <span class="h6">Happy client</span>
+          <h4>Robert Pawlik</h4>
+          <span class="h6">Solarwatt</span>
         </div>
       </div>
       
