deploy: VentoryApp/website-content@b6b3ccdbc202c383b6cdab2c120a56833f4aec1b

--- a/products/index.html
+++ b/products/index.html
@@ -297,7 +297,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         </div>
       </div>
       <div class="col-md-6 align-self-center pl-lg-4">
-        <p class="subtitle" data-aos="fade-up">Better Productiviy and Easy Automation</p>
+        <p class="subtitle" data-aos="fade-up">Better Productivity and Easy Automation</p>
         <h2 class="section-title" data-aos="fade-up" data-aos-delay="200">Ventory Web</h2>
         <p data-aos="fade-up" data-aos-delay="400">Ventory Web gives you insights to ascertain, understand, and act on real-time stock information from your field operations. Follow up on alerts, create and assign tasks for field employees and be back in control of your business.</p>
         
