--- a/changelog/index.html
+++ b/changelog/index.html
@@ -240,7 +240,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       <div class="col-12">
         <div class="content">
           <h3 id="february-updates">February Updates</h3>
-<p><strong>Feb 6, 2019</strong></p>
+<p><strong>Feb 6, 2019</strong>
+Dit is de changelog.</p>
 <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt dolore magna aliquyam erat, sed diam voluptua. At vero eos et ustoLorem ipsum dolor sit amet, consetetur.&quot;</p>
 
 
