deploy: VentoryApp/website-content@aba3cce55e5d77bd8ec885e26b28e3bfc16acbb7

--- a/changelog/index.html
+++ b/changelog/index.html
@@ -242,7 +242,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           <h3 id="february-updates">February Updates</h3>
 <p><strong>Feb 6, 2019</strong>
 Dit is de changelog.</p>
-<p>Lorem ipsum dolor sit amet, testerdetest consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt dolore magna aliquyam erat, sed diam voluptua. At vero eos et ustoLorem ipsum dolor sit amet, consetetur.&quot;</p>
+<p>Lorem ipsum dolor sit amet, testerdetestederder consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt dolore magna aliquyam erat, sed diam voluptua. At vero eos et ustoLorem ipsum dolor sit amet, consetetur.&quot;</p>
 
 
 <div class="mt-4">
