deploy: VentoryApp/website-content@cfbbc8e5c19178b4c9e6c2f494d066ce3913b492

--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <div class="row align-items-center justify-content-between">
       <div class="col-lg-6 pl-lg-0 text-center text-lg-left">
         <h1 class="text-white position-relative">Smart. Simple. Scalable.<span class="watermark"></span></h1>
-        <p class="text-white pt-2 pb-3">Remote visibility and control to digitize, enhance and streamline your field inventory, anywhere, anytime.</p>
+        <p class="text-white pt-2 pb-3">The #1 cycle counting solution in the market.</p>
         <div class="row">
         
         <div class="col mb-3">
