deploy: VentoryApp/website-content@0d971445c466ca19c3caab37de14f238214cd444

--- a/contact/index.html
+++ b/contact/index.html
@@ -331,11 +331,19 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
     if (!valid) return;
 
-    fetch('https://api.hsforms.com/submissions/v3/integration/submit/c0669617-084b-4fa4-a20d-bab8185a660b', {
+    fetch('https://api.hsforms.com/submissions/v3/integration/submit/25716919/c0669617-084b-4fa4-a20d-bab8185a660b', {
       method: 'POST', 
       headers: {'Content-Type': 'application/json'}, 
-      body: JSON.stringify(getFormData(CONTACT_FORM)), 
-      hutk: getHubspotUtkCookie()})
+      body: JSON.stringify(
+      {
+        fields: getFormData(CONTACT_FORM),
+        context: {
+          hutk: getHubspotUtkCookie(),
+          pageName: document.title,
+          pageUri: window.location.href
+        }
+      }), 
+    })
     .then(resp => {
       console.log('form submit', resp);
       if (resp.status != 200) {
