deploy: VentoryApp/website-content@12905e01b68deb5ae20ee97b7dc97ff2c13094c7

--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <div class="row align-items-center justify-content-between">
       <div class="col-lg-6 pl-lg-0 text-center text-lg-left">
         <h1 class="text-white position-relative">#1 cycle counting solution on the market<span class="watermark"></span></h1>
-        <p class="text-white pt-2 pb-3">Smart. Simple. Scalable. Remote visibility and control to digitize, enhance and streamline your field inventory, anywhere, anytime.<br><br><strong>Discover why Ventory is the #1 cycle counting solution in the market.</strong></p>
+        <p class="text-white pt-2 pb-3">Smart. Simple. Scalable. <br> Remote visibility and control to digitize, enhance and streamline your field inventory, anywhere, anytime.</p>
         <div class="row">
         
         <div class="col mb-3">
