--- a/index.html
+++ b/index.html
@@ -211,8 +211,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <div class="container">
     <div class="row align-items-center justify-content-between">
       <div class="col-lg-6 pl-lg-0 text-center text-lg-left">
-        <h1 class="text-white position-relative">#1 cycle counting solution on the market<span class="watermark"></span></h1>
-        <p class="text-white pt-2 pb-3">Smart. Simple. Scalable. <br> Remote visibility and control to digitize, enhance and streamline your field inventory, anywhere, anytime.</p>
+        <h1 class="text-white position-relative">#2 cycle counting solution on the market<span class="watermark"></span></h1>
+        <p class="text-white pt-2 pb-3">#3 Smart. Simple. Scalable. <br> #4Remote visibility and control to digitize, enhance and streamline your field inventory, anywhere, anytime.</p>
         <div class="row">
         
         <div class="col mb-3">
