deploy: VentoryApp/website-content@292b06d069fe2d4ed80acb07fb57ac8cfe25dd48

--- a/career/web-project-manager.1/index.html
+++ b/career/web-project-manager.1/index.html
@@ -222,32 +222,21 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <div class="row justify-content-between">
       <div class="col-lg-7 order-2 order-lg-1">
         <div class="content">
-          <h3 id="jobs-description">Jobs Description</h3>
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
-labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-cillum dolore eu fugiat nulla pariatur.</p>
-<p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
-sed ut perspiciatis unde.</p>
-<h5 id="responsibilities">Responsibilities:</h5>
-<p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim
-id est laborum sed ut perspiciatis unde.</p>
+          <h3 id="job-description">Job Description</h3>
+<p>At Ventory, we are revolutionizing how enterprises digitize their supply chains. Our platform enables organizations across multiple industries (Life Sciences &amp; Healthcare, Humanitarian Relief, Solar &amp; Renewables) digitize their field inventory.</p>
+<p>As a Flutter developer you will play a pivotal role in building and scaling Ventory’s software platform. You’ll be part of a cross-functional team that’s responsible for the full software development lifecycle – from ideation to deployment. As we have embedded our strategic customers in the product development process you will often be engaged in getting direct feedback from end users allowing you to see the direct impact of what we build and how it helps our customers.</p>
+<h5 id="about-you">About You:</h5>
+<p>You are passionate about technology. You love learning and can quickly adapt. You have an affinity towards addressing challenges with innovative solutions, enjoy working with and growing together with a team, and want to play a pivotal role in the success of a young company making an impact.</p>
+<p>We&rsquo;re looking for someone who has experience on building Flutter apps with RiverPod, GraphQL_Flutter and Artemis (or another GraphQL Code gen library).
+In addition, if you have experience or passion to work with Typescript, React, Apollo client &amp; server, Type-GraphQL, Fastify, Microsoft Graph, Firebase, PostgresSQL, GitHub, and Azure App Services, this would be a great fit for you.</p>
+<h5 id="why-should-you-join-us">Why should you join us?</h5>
 <ul>
-<li>Talking with clients or account managers to discuss the business objectives and requirements of the job;</li>
-<li>Estimating the time required to complete the work and providing quotes for clients;</li>
-<li>Developing design briefs that suit the client&rsquo;s purpose;</li>
-<li>Thinking creatively to produce new ideas, concepts and developing interactive design;</li>
-<li>Presenting finalized ideas and concepts to clients or account managers;</li>
-</ul>
-<h5 id="requirements">Requirements:</h5>
-<p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim
-id est laborum sed ut perspiciatis unde.</p>
-<ul>
-<li>Talking with clients or account managers to discuss the business objectives and requirements of the job;</li>
-<li>Estimating the time required to complete the work and providing quotes for clients;</li>
-<li>Developing design briefs that suit the client&rsquo;s purpose;</li>
-<li>Thinking creatively to produce new ideas, concepts and developing interactive design;</li>
-<li>Presenting finalized ideas and concepts to clients or account managers;</li>
+<li>A great opportunity for an ambitious Software Engineer, who wants to be in front of the end user and enjoy direct feedback on the impact their work is making.</li>
+<li>You will have a unique learning and growth opportunity where you can set the foundations in the company while making an impact for customers all over the world.</li>
+<li>You will play a pivotal role in fundamental decisions of the technology and product strategy.</li>
+<li>Join a dynamic international team with proven success behind them in bringing innovative solutions into the market.</li>
+<li>A competitive salary with fringe benefits.</li>
+<li>Flexible working conditions.</li>
 </ul>
 
         </div>
