--- a/careers/flutter-developer/index.html
+++ b/careers/flutter-developer/index.html
@@ -32,10 +32,12 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
 
 <!-- Open Graph image and Twitter Card metadata -->
-<meta property="og:image" content="https://www.ventory.io/images/careers/logo-1.png" />
-  <meta property="og:image:width" content="36">
-    <meta property="og:image:height" content="36">
-    <meta property="og:image:type" content="image/png">
+<meta property="og:image" content="https://www.ventory.io/images/careers/flutter-icon.webp" />
+  <meta name="twitter:image" content="https://www.ventory.io/images/careers/flutter-icon.webp"/>
+      <meta name="twitter:card" content="summary">
+    <meta property="og:image:width" content="200">
+    <meta property="og:image:height" content="200">
+    <meta property="og:image:type" content="image/webp">
 <meta name="twitter:title" content="Flutter developer"/>
 <meta name="twitter:description" content="As a Flutter developer you will play a pivotal role in building and scaling Ventory’s software platform."/>
 <meta property="og:title" content="Flutter developer" />
