--- a/careers/open-application/index.html
+++ b/careers/open-application/index.html
@@ -32,10 +32,12 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
 
 <!-- Open Graph image and Twitter Card metadata -->
-<meta property="og:image" content="https://www.ventory.io/images/careers/logo-2.png" />
-  <meta property="og:image:width" content="36">
-    <meta property="og:image:height" content="37">
-    <meta property="og:image:type" content="image/png">
+<meta property="og:image" content="https://www.ventory.io/images/careers/open-icon.webp" />
+  <meta name="twitter:image" content="https://www.ventory.io/images/careers/open-icon.webp"/>
+      <meta name="twitter:card" content="summary">
+    <meta property="og:image:width" content="200">
+    <meta property="og:image:height" content="200">
+    <meta property="og:image:type" content="image/webp">
 <meta name="twitter:title" content="Open Application"/>
 <meta name="twitter:description" content="We are always happy to welcome talented new people. If you don&#39;t see an open position that suits you, submit an open application!"/>
 <meta property="og:title" content="Open Application" />
