deploy: VentoryApp/website-content@a659b6fd715d713cf8adf9522743f90d13b43268

--- a/careers/flutter-developer/index.html
+++ b/careers/flutter-developer/index.html
@@ -242,7 +242,7 @@ In addition, if you have experience or passion to work with Typescript, React, A
 </ul>
 
         </div>
-        <a href="mailto:hello@ventory.io?subject=Job%20application%3A%20Flutter%20Developer&amp;body=Don%27t%20forget%20to%20include%20your%20CV!%20Talk%20soon%2C%20team%20Ventory" class="btn btn-primary">Apply Now</a>
+        <a href="mailto:ellen.malfliet@ventory.io?subject=Job%20application%3A%20Flutter%20Developer&amp;body=Don%27t%20forget%20to%20include%20your%20CV!%20Talk%20soon%2C%20team%20Ventory" class="btn btn-primary">Apply Now</a>
       </div>
 
       <div class="col-lg-4 order-1 order-lg-2 mb-5 mb-lg-0">
