deploy: VentoryApp/website-content@583632df547357d917df17f55055a21b16d2e269

--- a/404.html
+++ b/404.html
@@ -169,7 +169,7 @@
             <h4 class="text-white mb-4">Contact Info</h4>
             <ul class="list-unstyled">
               <li class="mb-3 text-light">M28 Ventures (dba Ventory) Annecylaan 22, 1950 Kraainem <br/> BE 683.940.268</li>
-              <li class="mb-3 text-light">+32 487 717 535</li>
+              <li class="mb-3 text-light"></li>
               <li class="mb-3 text-light">info@ventory.io</li>
             </ul>
           </div>
