deploy: VentoryApp/website-content@d98a773aea096c7776de9c859daf2333145a4bd1

--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <div class="container">
     <div class="row align-items-center justify-content-between">
       <div class="col-lg-6 pl-lg-0 text-center text-lg-left">
-        <h1 class="text-white position-relative" style="font-size: 45px;">#1 cycle counting solution on the market<span class="watermark"></span></h1>
+        <h1 class="text-white position-relative" style="font-size: 45px;">Remote Inventory Control for the Digital Age<span class="watermark"></span></h1>
         
           <h3 class="text-white">Smart. Simple. Scalable.</h3>
         
