deploy: VentoryApp/website-content@821d1be62c39cde757eea8add55a783f01917bc9

--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       </div>
       <div class="col-lg-6 col-md-7 text-center text-md-left">
         <p class="subtitle" data-aos="fade-left">THE SOLUTION</p>
-        <h2 class="section-title" data-aos="fade-left">Ventory digitizes and automates the field inventory locations</h2>
+        <h2 class="section-title" data-aos="fade-left">Ventory digitizes and automates your field inventory locations</h2>
         <p class="mb-4" data-aos="fade-left"></p>
         
           <ul data-aos="fade-left" data-aos-delay="600">
