--- a/faq/index.html
+++ b/faq/index.html
@@ -120,7 +120,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <div class="naviagtion fixed-top transition">
   <div class="container">
     <nav class="navbar navbar-expand-lg navbar-dark p-0">
-      <a class="navbar-brand p-0" href="/"><img src="https://www.ventory.io/images/logo-ventory.webp" alt="Ventory | The Best Solution for Inventory Management" width="250px"></a>
+      <a class="navbar-brand p-0" href="/"><img src="https://www.ventory.io/images/logo-ventory.webp" alt="Ventory | #1 Solution for Inventory Control" width="250px"></a>
       <button class="navbar-toggler border-0" type="button" data-toggle="collapse" data-target="#navigation" aria-controls="navigation"
         aria-expanded="false" aria-label="Toggle navigation">
         <i class="fa fa-bars text-white h3 mb-0"></i>
@@ -481,7 +481,7 @@ subscribeForm.addEventListener('submit', (e) => {
     <div class="container">
       <div class="row justify-content-between">
         <div class="col-md-5 mb-4 mb-md-0">
-          <a href="/"><img src="https://www.ventory.io/images/logo-ventory.webp" class="mb-4" alt="Ventory | The Best Solution for Inventory Management" width="200px"></a>
+          <a href="/"><img src="https://www.ventory.io/images/logo-ventory.webp" class="mb-4" alt="Ventory | #1 Solution for Inventory Control" width="200px"></a>
           <p class="text-light mb-4">Ventory catapults you to the future of field inventory management through a smart, cloud-based solution you can access from the web and your mobile anytime!</p>
           <ul class="list-inline social-icons">
             
