--- a/index.html
+++ b/index.html
@@ -463,7 +463,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       </div>
       <div class="col-lg-6 col-md-7 text-center text-md-left">
         <p class="subtitle" data-aos="fade-left"></p>
-        <h2 class="section-title" data-aos="fade-left">Increase Your Productivity, Analyze and pPredict Your Field Operations</h2>
+        <h2 class="section-title" data-aos="fade-left">Increase Your Productivity, Analyze and Predict Your Field Operations</h2>
         <p class="mb-4" data-aos="fade-left"></p>
         
           <ul data-aos="fade-left" data-aos-delay="600">
