deploy: VentoryApp/website-content@fa33eac51bbac6ea7566f491ecd85dda71654f16

--- a/404.html
+++ b/404.html
@@ -112,8 +112,8 @@
 
           
           <!-- get start btn -->
-          <a href="https://app.ventory.io/signup/"
-            class="btn btn-outline-primary text-white ml-lg-3">Start your Trial</a>
+          <a href="https://www.ventory.io/"
+            class="btn btn-outline-primary text-white ml-lg-3">Book a demo</a>
           
         </div>
       </nav>
