deploy: VentoryApp/website-content@ea92ec735208a2c6ee3779cb9b51474bd58351e6

--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <div class="container">
     <div class="row align-items-center justify-content-between">
       <div class="col-lg-6 pl-lg-0 text-center text-lg-left">
-        <h1 class="text-white position-relative" style="font-size: 45px;">Remote Inventory Control Reimagined<span class="watermark"></span></h1>
+        <h1 class="text-white position-relative" style="font-size: 45px;">Remote Visibility &amp; Control over your Field Inventory<span class="watermark"></span></h1>
         
           <h3 class="text-white">Smart. Simple. Scalable.</h3>
         
