--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           class="h-full object-cover hidden md:block"
         >
           <source
-            src="https://25716919.fs1.hubspotusercontent-eu1.net/hubfs/25716919/Ventory%20Intro%20Video/Header-video.mp4"
+            src="https://25716919.fs1.hubspotusercontent-eu1.net/hubfs/25716919/Ventory%20Intro%20Video/Header%20video2.mp4"
             class="img-fluid"
             alt="Ventory Web"
             type="video/mp4"
