--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <div class="row align-items-center justify-content-between">
       <div class="col-lg-6 pl-lg-0 text-center text-lg-left">
         <h1 class="text-white position-relative" style="font-size: 45px">
-          Inventory Control &amp; Visibility Made Mobile<span class="watermark"></span>
+          Inventory Control Made Mobile<span class="watermark"></span>
         </h1>
         
         <h3 class="text-white">Smart. Simple. Scalable.</h3>
