--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
               class="btn btn-primary"
               target="popup"
               onclick="popupWindow('https:\/\/25716919.fs1.hubspotusercontent-eu1.net\/hubfs\/25716919\/Ventory%20Intro%20Video\/Ventory%20Intro%20v1.0.mp4', 'Book a demo',  800 , 600); return false;"
-              >Watch Video</a
+              >How It Works</a
             >
              
           </div>
