deploy: VentoryApp/website-content@4727defd641134633b3bb58336e78014ca8feae8

--- a/contact/index.html
+++ b/contact/index.html
@@ -291,7 +291,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
               <i class="fas fa-envelope icon-primary"></i>
               <div class="pl-3">
                 <h6 class="text-dark">Email</h6>
-                <p><a href="mailto:info@ventory.io">info@ventory.io</a></p>
+                <p><a href="mailto:hello@ventory.io">hello@ventory.io</a></p>
               </div>
             </li>
             
@@ -301,7 +301,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
               <i class="fas fa-map icon-primary"></i>
               <div class="pl-3">
                 <h6 class="text-dark">Address</h6>
-                <p>M28 Ventures (dba Ventory) Annecylaan 22, 1950 Kraainem <br/> BE 683.940.268</p>
+                <p>Ventory BV Brixtonlaan 9, 1930 Zaventem <br/> BE 683.940.268</p>
               </div>
             </li>
             
@@ -612,9 +612,9 @@ subscribeForm.addEventListener('submit', (e) => {
         <div class="col-lg-3 col-md-4 col-sm-6">
           <h4 class="text-white mb-4">Contact Info</h4>
           <ul class="list-unstyled">
-            <li class="mb-3 text-light">M28 Ventures (dba Ventory) Annecylaan 22, 1950 Kraainem <br/> BE 683.940.268</li>
+            <li class="mb-3 text-light">Ventory BV Brixtonlaan 9, 1930 Zaventem <br/> BE 683.940.268</li>
             <li class="mb-3 text-light"><a href="tel:"></a></li>
-            <li class="mb-3 text-light"><a href="mailto:info@ventory.io">info@ventory.io</a></li>
+            <li class="mb-3 text-light"><a href="mailto:hello@ventory.io">hello@ventory.io</a></li>
           </ul>
         </div>
       </div>
