--- a/faq/index.html
+++ b/faq/index.html
@@ -359,7 +359,7 @@ This adds another strategy component to the game.</p>
             </div>
             <div class="col-lg-5 my-md-2 my-2">
               <button id="subscribe-form__submit-btn" type="submit" name="subscribe" class="btn btn-primary btn-lg border-0 w-100">Subscribe Now</button>
-              <div style="position: absolute; left: -5000px;" aria-hidden="true">
+              <div style="position: absolute; left: -5000px;">
                 <input type="text" name="" tabindex="-1">
               </div>
             </div>
@@ -537,7 +537,7 @@ subscribeForm.addEventListener('submit', (e) => {
           <p class="text-light mb-4">Ventory catapults you to the future of field inventory management through a smart, cloud-based solution you can access from the web and your mobile anytime!</p>
           <ul class="list-inline social-icons">
             
-            <li class="list-inline-item"><a href="https://be.linkedin.com/company/ventory" role="button" target="_blank" aria-label=""><i class="fab fa-linkedin-in"></i></a></li>
+            <li class="list-inline-item"><a href="https://be.linkedin.com/company/ventory" role="button" target="_blank" aria-label="Social"><i class="fab fa-linkedin-in"></i></a></li>
             
           </ul>
         </div>
