deploy: VentoryApp/website-content@7d803c72f0980fbcf84f62ea4101461ff5ce879f

--- a/pricing/index.html
+++ b/pricing/index.html
@@ -59,13 +59,13 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <link rel="preconnect" href="//ajax.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="anonymous">
 <link rel="preconnect" href="https://use.fontawesome.com" crossorigin>
-
+<link rel="preconnect" href="//cdnjs.cloudflare.com">
 <link rel="preconnect" href="//www.googletagmanager.com">
 <link rel="preconnect" href="//www.google-analytics.com">
 <link rel="dns-prefetch" href="https://fonts.gstatic.com">
 <link rel="dns-prefetch" href="https://use.fontawesome.com">
 <link rel="dns-prefetch" href="//ajax.googleapis.com">
-
+<link rel="dns-prefetch" href="//cdnjs.cloudflare.com">
 <link rel="dns-prefetch" href="//www.googletagmanager.com">
 <link rel="dns-prefetch" href="//www.google-analytics.com">
 <link rel="dns-prefetch" href="//fonts.googleapis.com">
@@ -379,7 +379,14 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 </style>
 
 <!-- business-case -->
-
+<section id="business-case-calculator" class="section-lg-bottom">
+  <div class="container">
+    <div class="row">
+      <h2>The business case</h2>
+      <iframe id="business-case-calculator-iframe" src="/business-case-builder/index.html" width="100%" frameBorder="0" marginwidth="0" height="300" marginheight="0" scrolling="No" hspace="0" vspace="0"></iframe>
+    </div>
+  </div>
+</section>
 
 	<!-- subscription -->
 
