--- a/contact/index.html
+++ b/contact/index.html
@@ -59,13 +59,13 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <link rel="preconnect" href="//ajax.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="anonymous">
 <link rel="preconnect" href="https://use.fontawesome.com" crossorigin>
-
+<link rel="preconnect" href="//cdnjs.cloudflare.com">
 <link rel="preconnect" href="//www.googletagmanager.com">
 <link rel="preconnect" href="//www.google-analytics.com">
 <link rel="dns-prefetch" href="https://fonts.gstatic.com">
 <link rel="dns-prefetch" href="https://use.fontawesome.com">
 <link rel="dns-prefetch" href="//ajax.googleapis.com">
-
+<link rel="dns-prefetch" href="//cdnjs.cloudflare.com">
 <link rel="dns-prefetch" href="//www.googletagmanager.com">
 <link rel="dns-prefetch" href="//www.google-analytics.com">
 <link rel="dns-prefetch" href="//fonts.googleapis.com">
