deploy: VentoryApp/website-content@5a908f68a4e900c184798da05ee104ef61e910df

--- a/pricing/index.html
+++ b/pricing/index.html
@@ -382,7 +382,14 @@
 </style>
 
 <!-- business-case -->
-
+<section id="business-case-calculator" class="section-lg-bottom">
+  <div class="container">
+    <div class="row">
+      <h2>The business case</h2>
+      <iframe id="business-case-calculator-iframe" src="/business-case-builder/index.html" width="100%" frameBorder="0" marginwidth="0" height="300" marginheight="0" scrolling="No" hspace="0" vspace="0"></iframe>
+    </div>
+  </div>
+</section>
 
 	<!-- subscription -->
 
