--- a/faq/index.html
+++ b/faq/index.html
@@ -355,7 +355,7 @@ This adds another strategy component to the game.</p>
         <h3 class="text-white flex-fill">Subscribe <br> to our newsletter</h3>
         <div>
           <form id="subscribe-form"
-          name="mc-embedded-subscribe-form" target="_blank" novalidate class="row flex-fill">
+          name="mc-embedded-subscribe-form" target="_blank" rel="noreferrer noopener" novalidate class="row flex-fill">
             <div style="height: 80px" class="col-lg-7 my-md-2 my-2 form-field">
               <input type="email" name="email" class="form-control text-white px-4 w-100 text-center text-md-left" placeholder="Your Email">
               <div class="form-field__error">Invalid email</div>
@@ -536,7 +536,7 @@ subscribeForm.addEventListener('submit', (e) => {
           <p class="text-light mb-4">Ventory catapults you to the future of field inventory management through a smart, cloud-based solution you can access from the web and your mobile anytime!</p>
           <ul class="list-inline social-icons">
             
-            <li class="list-inline-item"><a href="https://be.linkedin.com/company/ventory" role="button" target="_blank" aria-label="Social"><i class="fab fa-linkedin-in"></i></a></li>
+            <li class="list-inline-item"><a href="https://be.linkedin.com/company/ventory" role="button" target="_blank" rel="noreferrer noopener" aria-label="Social"><i class="fab fa-linkedin-in"></i></a></li>
             
           </ul>
         </div>
