--- a/careers/senior-fullstack-engineer/index.html
+++ b/careers/senior-fullstack-engineer/index.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 <html lang="en-us">
 <head>
-
-
-
-
-
-
-
-<meta charset="utf-8">
+	
+	<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+	new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+	j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+	'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+	})(window,document,'script','dataLayer','GTM-M828WRS');</script>
+	<meta charset="utf-8">
 <title>Senior Full Stack Engineer</title>
 
 
@@ -106,13 +105,10 @@
 </style></head>
 
 <body>
-
-
-
-
-
 	
-<!-- navigation -->
+	<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-M828WRS"
+		height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+	<!-- navigation -->
 
 <div class="navigation fixed-top transition" id="header">
   <div class="container">
@@ -250,7 +246,7 @@
   };
 </script>
 
-	<!-- page-header -->
+		<!-- page-header -->
 <section
   class="page-title page-title-overlay bg-cover"
   data-background="https://25716919.fs1.hubspotusercontent-eu1.net/hubfs/25716919/Website/background/about.webp"
@@ -271,7 +267,7 @@
 </section>
 <!-- /page-header -->
 
-	
+		
 
 <section class="section section-lg-bottom">
   <div class="container">
@@ -374,7 +370,7 @@ Flexibility – we aim for big goals, to make a positive impact and a lasting di
 </section>
 
 
-	<!-- subscription -->
+		<!-- subscription -->
 
 
 <section class="subscription">
@@ -719,10 +715,10 @@ subscribeForm.addEventListener('submit', (e) => {
 
 <!-- google analitycs -->
 
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-Q5FZ7EJ5KM"></script> <script>   window.dataLayer = window.dataLayer || [];   function gtag(){dataLayer.push(arguments);}   gtag('js', new Date());   gtag('config', 'G-Q5FZ7EJ5KM'); </script>
 
-
-<script type="text/javascript" id="hs-script-loader" async defer src="//js-eu1.hs-scripts.com/25716919.js"></script>
-
+	<script type="text/javascript" id="hs-script-loader" async defer src="//js-eu1.hs-scripts.com/25716919.js"></script>
+	
 </body>
 
 </html>
