--- a/careers/senior-fullstack-engineer/index.html
+++ b/careers/senior-fullstack-engineer/index.html
@@ -3,10 +3,10 @@
 <head>
 	
 	<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-	new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-	j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-	'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-	})(window,document,'script','dataLayer','GTM-M828WRS');</script>
+		new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+		j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+		'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+		})(window,document,'script','dataLayer','GTM-KK8FCJC');</script>
 	<meta charset="utf-8">
 <title>Senior Full Stack Engineer</title>
 
@@ -106,7 +106,7 @@
 
 <body>
 	
-	<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-M828WRS"
+	<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KK8FCJC"
 		height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 	<!-- navigation -->
 
@@ -715,7 +715,7 @@ subscribeForm.addEventListener('submit', (e) => {
 
 <!-- google analitycs -->
 
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-Q5FZ7EJ5KM"></script> <script>   window.dataLayer = window.dataLayer || [];   function gtag(){dataLayer.push(arguments);}   gtag('js', new Date());   gtag('config', 'G-Q5FZ7EJ5KM'); </script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-EMT76VP3B4"></script> <script>   window.dataLayer = window.dataLayer || [];   function gtag(){dataLayer.push(arguments);}   gtag('js', new Date());   gtag('config', 'G-EMT76VP3B4'); </script>
 
 	<script type="text/javascript" id="hs-script-loader" async defer src="//js-eu1.hs-scripts.com/25716919.js"></script>
 	
