--- a/get-started/index.html
+++ b/get-started/index.html
@@ -7,6 +7,19 @@
 		j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 		'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
 		})(window,document,'script','dataLayer','GTM-KK8FCJC');</script>
+	
+
+	
+	<script>
+		(function(h,o,t,j,a,r){
+				h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
+				h._hjSettings={hjid:3007343,hjsv:6};
+				a=o.getElementsByTagName('head')[0];
+				r=o.createElement('script');r.async=1;
+				r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
+				a.appendChild(r);
+		})(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
+	</script>
 	<meta charset="utf-8">
 <title>Get Started Today!</title>
 
@@ -101,6 +114,7 @@
     font-family: " Font Awesome 5 Free ";
   }
 </style></head>
+
 
 <body>
 	
