deploy: VentoryApp/website-content@d8118e63d552fdc30c95366520be92b2524befd3

--- a/solution/index.html
+++ b/solution/index.html
@@ -883,6 +883,10 @@ subscribeForm.addEventListener('submit', (e) => {
 
 	<script type="text/javascript" id="hs-script-loader" async defer src="//js-eu1.hs-scripts.com/25716919.js"></script>
 	
+	
+	
+	<script>window._nQc="89417388";</script> <script async src="https://serve.albacross.com/track.js"></script>
+	
 </body>
 
 </html>
