--- a/resources/index.html
+++ b/resources/index.html
@@ -22,7 +22,7 @@
     })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
   </script>
   <meta charset="utf-8">
-<title>Legals</title>
+<title>Resources</title>
 
 
 
@@ -192,7 +192,7 @@
 <section class="hero" style="background-image: url(https://25716919.fs1.hubspotusercontent-eu1.net/hubfs/25716919/Website/background/about.webp); height: 364px; background-repeat: no-repeat; background-size: cover; background-position: center;">
   <div class="container">
     <div class="hero-text text-light">
-      <h1>Legals</h1>
+      <h1>Resources</h1>
       
     </div>
     <div class="hero-image" style="height: calc(364px - 20px)">
