deploy: VentoryApp/Website-Ventory@a6fdc8ca8bed9fbb22b6e964057ea93cd65ef0b5

--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
           <i class="fa-solid fa-arrow-trend-up mr-2 text-secondary fs-2"></i>
           <h3 class="m-0 fs-2">-35% Discrepancies</h3>
         </div>
-        <p>Ensure accurate accounting records, reduce the cost of goods sold, and prevent profit loss</p>
+        <p>Improve inventory accuracy, mitigate supply chain risks, and prevent financial loss</p>
       </div>
       
       <div class="card">
