deploy: VentoryApp/Website-Ventory@d9aaf66d1dcb00286a48df4ff390c5c4a35bc37e

--- a/index.html
+++ b/index.html
@@ -298,31 +298,14 @@
     <div class="hero-media">
 
 
+<video class="fluid" 
+  autoplay 
+  muted 
+  loop>
+  <source src="https://25716919.fs1.hubspotusercontent-eu1.net/hubfs/25716919/Website/animations/full.webm" type="video/webm" alt=""/>
+</video>
 
 
-<dotlottie-player id="home-hero__animation" 
-class="fluid" src="/animations/ventory.lottie" background="transparent" speed="1" loop autoplay style="min-height: 100%;min-width: 100%;"></dotlottie-player>
-
-
-<style>
-  #home-hero__animation {
-    width: 300px;
-    aspect-ratio: 1;
-  }
-  
-  @media (min-width: 425px) {
-    #home-hero__animation {
-      width: 400px;
-    }
-  }
-
-  @media (min-width: 1024px) {
-    #home-hero__animation {
-      width: 500px;
-    }
-  }
-  
-</style>
 </div>
   </div>
 </section>
@@ -1068,7 +1051,7 @@ class="fluid" src="/animations/part3.lottie" background="transparent" speed="1" 
 <script src="https://kit.fontawesome.com/f458e28701.js" crossorigin="anonymous"></script>
 
 
-<script type="module" src="https://unpkg.com/@dotlottie/player-component@1.0.0/dist/dotlottie-player.js"></script>
+
 
 
 
