deploy: VentoryApp/Website-Ventory@bb9337794eb345fa2adab94cda81697da38ca3ba

--- a/legal/terms-of-use/index.html
+++ b/legal/terms-of-use/index.html
@@ -389,9 +389,7 @@ The forgoing limitations shall not apply to the extent restricted or prevented b
   });
 </script>
 <script src="https://kit.fontawesome.com/f458e28701.js" crossorigin="anonymous"></script>
-
-
-
+<script type="module" src="https://unpkg.com/@dotlottie/player-component@1.0.0/dist/dotlottie-player.js"></script>
 
 
 
