--- a/careers/sdr-us/index.html
+++ b/careers/sdr-us/index.html
@@ -431,9 +431,7 @@ We recognize and celebrate each other’s differences. We develop a diverse and 
   });
 </script>
 <script src="https://kit.fontawesome.com/f458e28701.js" crossorigin="anonymous"></script>
-
-
-
+<script type="module" src="https://unpkg.com/@dotlottie/player-component@1.0.0/dist/dotlottie-player.js"></script>
 
 
 
