--- a/careers/senior-fullstack-engineer/index.html
+++ b/careers/senior-fullstack-engineer/index.html
@@ -426,9 +426,7 @@ Flexibility – we aim for big goals, to make a positive impact and a lasting di
   });
 </script>
 <script src="https://kit.fontawesome.com/f458e28701.js" crossorigin="anonymous"></script>
-
-
-
+<script type="module" src="https://unpkg.com/@dotlottie/player-component@1.0.0/dist/dotlottie-player.js"></script>
 
 
 
