--- a/legal/license-agreement/index.html
+++ b/legal/license-agreement/index.html
@@ -538,9 +538,7 @@ if the Licensor has a reasonable basis to believe that Licensee is impairing the
   });
 </script>
 <script src="https://kit.fontawesome.com/f458e28701.js" crossorigin="anonymous"></script>
-
-
-
+<script type="module" src="https://unpkg.com/@dotlottie/player-component@1.0.0/dist/dotlottie-player.js"></script>
 
 
 
