--- a/technology/index.html
+++ b/technology/index.html
@@ -594,9 +594,7 @@ class="fluid" src="/animations/part3.lottie" background="transparent" speed="1" 
   });
 </script>
 <script src="https://kit.fontawesome.com/f458e28701.js" crossorigin="anonymous"></script>
-
-
-
+<script type="module" src="https://unpkg.com/@dotlottie/player-component@1.0.0/dist/dotlottie-player.js"></script>
 
 
 
