deploy: VentoryApp/Website-Ventory@3e3df936ff98a29f30412d25e93936bb8f5f44eb

--- a/technology/index.html
+++ b/technology/index.html
@@ -282,6 +282,12 @@
       
     </div>
     <div class="image">
+<img 
+  class="fluid" 
+  src="https://25716919.fs1.hubspotusercontent-eu1.net/hubfs/25716919/Website/technology/web.png" 
+  alt="Ventory Web"
+>
+
 
 
 </div>
