--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en-us">
-
+ 
 <head>
   
 
@@ -217,6 +217,7 @@
   </nav>
 
   <!-- Mobile --> 
+  <!-- Mobile --> 
 </header>
 
 <script>
@@ -270,7 +271,7 @@
 
 
 
-
+    
 
     <section class="section" id="home__hero">
       <div class="container" style="max-width: 1280px;">
