updated btn paddings

--- a/index.html
+++ b/index.html
@@ -129,8 +129,8 @@
           </li>
           
         </ul>
-        <a class="btn btn-filled py-2 mr-2" href="/get-started" style="padding-left: 24px !important; padding-right: 24px !important;">Get Started</a>
-        <a class="btn btn-outlined py-2 mr-2" href="/pricing" style="padding-left: 24px !important; padding-right: 24px !important;">Calculate ROI</a>
+        <a class="btn btn-filled py-2 mr-2" href="/get-started" style="padding-left: 24px !important; padding-right: 24px !important;padding-top: 12px !important;padding-bottom: 12px !important;">Get Started</a>
+        <a class="btn btn-outlined py-2 mr-2" href="/pricing" style="padding-left: 24px !important; padding-right: 24px !important;padding-top: 12px !important;padding-bottom: 12px !important;">Calculate ROI</a>
         
         <p aria-label="app" onclick="gotoPlatformApp(); return;" style="cursor: pointer; margin-left: 12px !important;">Login</p>
       </div>
