--- a/careers/index.html
+++ b/careers/index.html
@@ -349,7 +349,7 @@
           
           <div>
             <h3 class="mb-1">Sales Development Representative (SDR) </h3>
-            <p>Engineering | Anywhere | Full time | 27 Oct 2023</p>
+            <p>Sales | Anywhere | Full time | 27 Oct 2023</p>
           </div>
         </div>
         <a href="https://ventory.io/careers/sales-develoment-representative/index.html" class="btn btn-outlined">View Details</a>
