--- a/careers/sales-develoment-representative/index.html
+++ b/careers/sales-develoment-representative/index.html
@@ -420,9 +420,9 @@
             <div class="bubble mr-4"><i class="fa-solid fa-location-dot"></i></div>
             <p>
               Ventory BV<br>
-              Brixtonlaan 9<br>
-              1930 Zaventem<br>
-              BE 683.940.268<br>
+              Berkenlaan 8A+8B, Belgium<br>
+              1831 Diegem<br>
+              BE 1001.714.644<br>
             </p>
           </div>
         
