--- a/index.html
+++ b/index.html
@@ -833,9 +833,9 @@
     <a 
     role="button" 
     class="btn btn-filled center" 
-    href="/pricing"
+    href="/get-started"
   >
-    Business Case Calculator
+    Get Started
   </a>
 </div>
 </section>
