--- a/index.html
+++ b/index.html
@@ -938,7 +938,7 @@
             <div class="bubble mr-4"><i class="fa-solid fa-location-dot"></i></div>
             <p>
               Ventory BV<br>
-              Berkenlaan 8A+8B, 1831 Diegem<br>        
+              8 Excelsior, 1930 Zaventem<br>        
               Belgium<br>
               BE 1001.714.644<br>
             </p>
