--- a/legal/privacy-policy/index.html
+++ b/legal/privacy-policy/index.html
@@ -438,8 +438,8 @@ When you access the Website and its forms, Ventory collects information that inc
             <div class="bubble mr-4"><i class="fa-solid fa-location-dot"></i></div>
             <p>
               Ventory BV<br>
-              Berkenlaan 8A+8B, Belgium<br>
-              1831 Diegem<br>
+              8 Excelsior, 1930 Zaventem<br>        
+              Belgium<br>
               BE 1001.714.644<br>
             </p>
           </div>
