--- a/legal/license-agreement/index.html
+++ b/legal/license-agreement/index.html
@@ -522,8 +522,8 @@ if the Licensor has a reasonable basis to believe that Licensee is impairing the
             <div class="bubble mr-4"><i class="fa-solid fa-location-dot"></i></div>
             <p>
               Ventory BV<br>
-              Berkenlaan 8A+8B, Belgium<br>
-              1831 Diegem<br>
+              8 Excelsior, 1930 Zaventem<br>        
+              Belgium<br>
               BE 1001.714.644<br>
             </p>
           </div>
