deploy: VentoryApp/Website-Ventory@df8bcc542bb378561619831f6bfb3076f447053b

--- a/careers/index.html
+++ b/careers/index.html
@@ -26,7 +26,7 @@
 
 
 
-<base href="https://ventory.io/">
+<base href="https://ventoryapp.github.io/">
 
 
 
@@ -280,7 +280,7 @@
             <p>Engineering | Belgium | Full time | 06 Aug 2024</p>
           </div>
         </div>
-        <a href="https://ventory.io/careers/full-stack-engineer-team-lead/" class="btn btn-outlined">View Details</a>
+        <a href="https://ventoryapp.github.io/careers/full-stack-engineer-team-lead/" class="btn btn-outlined">View Details</a>
       </div>
     
       <div class="career-card">
@@ -293,7 +293,7 @@
             <p>Sales | Belgium | Full time | 06 Aug 2024</p>
           </div>
         </div>
-        <a href="https://ventory.io/careers/sales-development-representative/" class="btn btn-outlined">View Details</a>
+        <a href="https://ventoryapp.github.io/careers/sales-development-representative/" class="btn btn-outlined">View Details</a>
       </div>
     
   </div>
