--- a/customer-stories/index.html
+++ b/customer-stories/index.html
@@ -26,7 +26,7 @@
 
 
 
-<base href="https://ventory.io/">
+<base href="https://ventoryapp.github.io/">
 
 
 
@@ -315,7 +315,7 @@
       </div>
       
       <div class="flex justify-center align-center" >
-        <a href="https://ventory.io/" target="_blank" style="height: 67.5px; width: 120px;">
+        <a href="https://ventoryapp.github.io/" target="_blank" style="height: 67.5px; width: 120px;">
           <img
           class="fluid"
             src="https://25716919.fs1.hubspotusercontent-eu1.net/hubfs/25716919/Website/partner/capgemini.png"
@@ -327,7 +327,7 @@
       </div>
       
       <div class="flex justify-center align-center" >
-        <a href="https://ventory.io/" target="_blank" style="height: 67.5px; width: 120px;">
+        <a href="https://ventoryapp.github.io/" target="_blank" style="height: 67.5px; width: 120px;">
           <img
           class="fluid"
             src="https://25716919.fs1.hubspotusercontent-eu1.net/hubfs/25716919/Website/partner/r7.png"
